syntax = "proto3";
package position;
option go_package = "github.com/abc950309/tapewriter/entity";

message Position {
    int64 id = 1;
    int64 file_id = 2;
    int64 tape_id = 3;
    string path = 4;

    int64 mode = 17;
    int64 mod_time = 18;
    int64 write_time = 19;
    int64 size = 20;
    bytes hash = 21;
}
