syntax = "proto3";
package source;

option go_package = "github.com/abc950309/tapewriter/entity";

import "copy_status.proto";

message SourceFile {
    string path = 1;
    string parent_path = 2;
    string name = 3;

    int64 mode = 17;
    int64 mod_time = 18;
    int64 size = 19;
}

message Source {
    string base = 1;
    repeated string path = 2;
}

message SourceState {
    Source source = 1;
    int64 size = 2;
    copy_status.CopyStatus status = 3;
    optional string message = 4;
}
